--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@ __pycache__
 staticfiles
 .floo
 .flooignore
+
+frontend/node_modules
+frontend/.tmp
+frontend/bower_components
+frontend/dist
+frontend/src/app/config.js
