--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,9 @@ static3==0.7.0
 django-jet==1.0.4
 google-api-python-client==1.6.2
 feedparser==5.2.1
+
+django-cors-headers==2.0.2
+djangorestframework==3.5.4
+django-rest-auth==0.9.0
+
+## django-filter-1.0.1
