--- a/requirements.txt
+++ b/requirements.txt
@@ -17,5 +17,4 @@ feedparser==5.2.1
 django-cors-headers==2.0.2
 djangorestframework==3.5.4
 django-rest-auth==0.9.0
-
-## django-filter-1.0.1
+django-filter==1.0.1
