--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,9 @@
   "version": "1.4.5",
   "dependencies": {},
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "start": "node app",
+    "postinstall": "gulp default"
   },
   "devDependencies": {
     "browser-sync": "~2.9.11",
